# AlyCompiler

./: .bashrc  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  code.S  conditional.aly  downwards_funarg_problem_solved.S  example.aly  fact.aly  fib.aly  math.aly  pointers.aly  simple.aly  simple_math.aly
Documentation/: .gitignore  BUG_FIXES.md  Bibliography.md  C-Print-Formats.md  Commands.md  DEVELOPERS.tex  How-To-Link-Against-GNU.txt  NOTES.md  REFERENCE.tex  TODO.md
Examples/: arrays.aly  comparisons.aly  division_test.aly  external_function.aly  greatest_common_denominator.aly  nested_calls.aly  simple_math.aly  type_casting.aly  type_inferred_variable_declaration.aly
MingGW Makefiles/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AlyCompiler.sln  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alyc.vcxproj  alyc.vcxproj.filters  cmake_install.cmake
Scripts/: Build.bat  Build.sh
editor/: aly-mode.el  aly.vim
examples/: conditional.aly  conditional2.aly  downward_funarg.aly  downward_funarg_but_real.aly  example.aly  fact.aly  factorial.aly  funarg_problem.aly  greatest_common_denominator.aly  interesting_math.aly  pointers.aly  potential_reinterpret.aly  simple.aly  simple_function.aly
src/: codegen.c  codegen.h  environment.c  environment.h  error.c  error.h  file_io.c  file_io.h  main.c  parser.c  parser.h  test.S  typechecker.c  typechecker.h
src/codegen/: codegen_forward.h  codegen_platforms.c  codegen_platforms.h  intermediate_representation.c  intermediate_representation.h  register_allocation.c  register_allocation.h
src/codegen/x86_64/: arch_x86_64.c  arch_x86_64.h  codegen_forward.h  codegen_platforms.h
